# data-science

./: .coverage  .env  .gcovr.cfg  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Doxyfile  README.md  conftest.py  coverage.info  coverage.txt  data-report.txt  intersection.pyi  logfile.txt  loggingfile.txt  notizen.txt  py_bindings.pyi  pytest.ini  python_coverage.txt  run_cpp_coverage.sh  setup.py  temp.info  test.py
.github/workflows/: ci.yml
Basics/: basic_class.py  basic_comprehensions.py  basic_functions.py  calculator.py  randoms.py  simple_gui.py
KI/KI_26959622/: KI01_26959622.ipynb  KI02_26959622.ipynb
ML/ML_MA_Sondjalim_Arrif_26959622/: ML_MA_Sondjalim_Arrif_26959622.html  ML_MA_Sondjalim_Arrif_26959622.ipynb  ML_MA_Sondjalim_Arrif_26959622_requirements.txt
bindings/: python_bindings.cpp
c++_coverage/: index.arithmetic.cpp.1777d18e55f0a15d02056aa4312f986f.html  index.functions.html  index.html  index.logging.cpp.13860ad7a053eec45742708dab06198a.html  index.main.cpp.7ec3c68a81efff79b6ca22ac1f1eabba.html  index.main.cpp.c9f842578b2c6ed79263195baaafa203.html  index.read_data.cpp.736e1449ee613d5ef3aefdba0a65d3ad.html  index.statistik.cpp.99fa14730fed46aa5866d33c808c0474.html  index.test_arithmetic.cpp.fa51f6bb50daef16392bbb98916668b4.html  index.test_logging.cpp.0e5cf13de638801e2be7dca04ac963f4.html  index.test_read_data.cpp.bcfc78d1c6cd2831c3cbb4a4134a141c.html  index.test_statistik.cpp.780b9cf03bfbe51f5f5e206a55ea7d3f.html  summary.txt
coverage-report/: index-sort-f.html  index-sort-l.html  index.html
coverage_report/: index-sort-f.html  index-sort-l.html  index.html
cpp_tests/: main.cpp  test_arithmetic.cpp  test_logging.cpp  test_read_data.cpp
data/: example.html  example.xml
docs/source/: conf.py  (+3 more)
html/: annotated.html  classLogging-members.html  classLogging.html  classReadData-members.html  classReadData.html  classStatistik-members.html  classStatistik.html  classes.html  dir_000001_000000.html  dir_000002_000003.html  dir_46f5b9c2aa022ca08259f88d2910a55a.html  dir_46f5b9c2aa022ca08259f88d2910a55a_dep.map  dir_46f5b9c2aa022ca08259f88d2910a55a_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_8f46c503ad4a32bd125d4189308369db.html  dir_8f46c503ad4a32bd125d4189308369db_dep.map  dir_8f46c503ad4a32bd125d4189308369db_dep.md5  dir_bfccd401955b95cf8c75461437045ac0.html  dir_bfccd401955b95cf8c75461437045ac0_dep.map  dir_bfccd401955b95cf8c75461437045ac0_dep.md5  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_enum.html  globals_func.html  graph_legend.html  index.html  logging_8cpp.html  logging_8cpp__incl.map  logging_8cpp__incl.md5  logging_8hpp.html  logging_8hpp__dep__incl.map  logging_8hpp__dep__incl.md5  logging_8hpp__incl.map  logging_8hpp__incl.md5  logging_8hpp_source.html  main_8cpp.html  (+35 more)
intersection.egg-info/: PKG-INFO  SOURCES.txt
latex/: annotated.tex  classLogging.tex  classReadData.tex  classStatistik.tex  files.tex  logging_8hpp_source.tex  read__data_8hpp_source.tex  refman.tex  statistik_8hpp_source.tex  test__logging_8hpp_source.tex  test__read__data_8hpp_source.tex  test__statistik_8hpp_source.tex  utilities_8hpp_source.tex
python_tests/: test_logging.py  test_read_data.py  test_statistik.py
src/: arithmetic.cpp  logging.cpp  main.cpp  read_data.cpp  statistik.cpp
visual_computing/: basic.py
(+339 files in other folders)
